# byte_factory

./: README.md  bython.py  cpu_v3_blueprint.txt  pyproject.toml  python_sim.py  run_assembler.py  temp.json
aoc_2024_inputs/: 01_short.txt  01_test.txt  02.txt  02_test.txt
bython_compiler/: create_blueprint.py  create_low_level_code.py  create_machine_code.py
bython_scripts/: test.by
configs/: sim_config_v3.yaml
docs/: ecall.md
factorisco_assember/: assembler.py  assembler_util.py  machine_language.py
factorisco_assembler/: assembler.py  assembler_util.py  create_low_level_code.py
factorisco_v_assembly/: aoc2024_03.s  aoc2025_01.s  aoc2025_02.s  aoc2025_03.s  aoc2025_04.s  branch_test_1.s  color_disp_test.s  congress_boot.s  ecall_test.s  exception_test.s  fib_1.s  fib_2.s  fib_3.s  fib_4.s  fib_5.s  forward_test_1.s  forward_test_2.s  hello_world.s  hello_world_2.s  hello_world_3.s  jump_test_1.s  la_test.s  long_program_test.s  mem_test_1.s  mem_test_2.s  mem_test_3.s  minesweeper.s  minesweeper_2.s  mlp.s  most_simplest.s  numeric_label_test.s  print_all_chars.s  ram_compression_test.s  snake.s  snake8.s  stack_test.s  title.s  trainer.s
output/: font_encodings.json  font_encodings_2.json  signal_dict.json
scripts/: ascii_to_int_lamp_encoding.py  color_display_generator.py  display_generator.py  font_encodings.json  frame_buffer_generator.py  gen_cmd_hash_table.py  get_signal_dict.py  input_file_to_rom.py  keyboard_script.py  ram_address_generator.py  ram_generator.py  ram_v2_fix.py  ram_v2_generator.py  reg_generator.py  rom__v1_generator.py  (+6 more)
(+63 files in other folders)
